Closed
Bug 662930
Opened 14 years ago
Closed 14 years ago
Consolidate IDB structured clone [de]serialization
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
RESOLVED
FIXED
mozilla7
People
(Reporter: khuey, Assigned: khuey)
Details
Attachments
(1 file, 1 obsolete file)
|
9.29 KB,
patch
|
bent.mozilla
:
review+
|
Details | Diff | Splinter Review |
This will make it easier to add custom serialization/deserialization hooks for fun types.
I removed AsyncConnectionHelper::ConvertCloneBufferToJSVal because
1) the safe if buffer.data() is null behavior seems like something everything should get
2) all of its callers clear the buffer manually after the call anyways.
This passes all IDB tests locally
Attachment #538117 -
Flags: review?(bent.mozilla)
| Assignee | ||
Comment 1•14 years ago
|
||
bent points out that assuming a context could be dangerous. This diff requires a context to be passed in explicitly.
Attachment #538117 -
Attachment is obsolete: true
Attachment #538117 -
Flags: review?(bent.mozilla)
Attachment #538121 -
Flags: review?(bent.mozilla)
Comment on attachment 538121 [details] [diff] [review]
Patch
Review of attachment 538121 [details] [diff] [review]:
-----------------------------------------------------------------
r=me if you move the JSContext* arg to be first, and we use NS_ASSERTION in idb code.
Attachment #538121 -
Flags: review?(bent.mozilla) → review+
| Assignee | ||
Comment 3•14 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite-
Resolution: --- → FIXED
Target Milestone: --- → mozilla7
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•