Bug 662930: Consolidate IDB structured clone serializations/deserializations. r=bent